--- a/TabBar2/Base.lproj/Main.storyboard
+++ b/TabBar2/Base.lproj/Main.storyboard
@@ -38,7 +38,7 @@
                             <constraint firstAttribute="centerY" secondItem="KQZ-1w-vlD" secondAttribute="centerY" id="exm-UA-ej4"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Single" image="singleicon" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Single" image="singleicon" selectedImage="singleicon" id="acW-dT-cKf"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
@@ -55,13 +55,30 @@
                     <view key="view" contentMode="scaleToFill" id="vKs-EM-hbB">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="IY0-bI-81B">
+                                <frame key="frameInset" minX="71" minY="278" width="240" height="300"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <pickerView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="dLG-4b-M5z">
+                                <frame key="frameInset" minX="4" minY="52" height="212" maxX="4"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="j9L-3E-G7g" id="6LQ-58-bq4"/>
+                                    <outlet property="delegate" destination="j9L-3E-G7g" id="sq4-CD-WbB"/>
+                                </connections>
+                            </pickerView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Dependent" image="dependenticon" id="3g9-dX-NKJ"/>
+                    <tabBarItem key="tabBarItem" title="Dependent" image="dependenticon" selectedImage="dependenticon" id="3g9-dX-NKJ"/>
+                    <connections>
+                        <outlet property="myImageView" destination="IY0-bI-81B" id="tyr-1s-8Dc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gjS-qz-PRm" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1418" y="0.0"/>
+            <point key="canvasLocation" x="1416.8" y="-0.44977511244377816"/>
         </scene>
         <!--Double-->
         <scene sceneID="wg7-f3-ORb">
@@ -95,7 +112,7 @@
                             <constraint firstAttribute="centerY" secondItem="zEq-FU-wV5" secondAttribute="centerY" id="qzY-Ky-pLD"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Double" image="doubleicon" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Double" image="doubleicon" selectedImage="doubleicon" id="cPa-gy-q4n"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4Nw-L8-lE0" sceneMemberID="firstResponder"/>
             </objects>
